--- a/2-1_NumPy데이터다루기/1_NumPy배열객체.ipynb
+++ b/2-1_NumPy데이터다루기/1_NumPy배열객체.ipynb
@@ -437,6 +437,341 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8]],\n",
+       "\n",
+       "       [[ 2,  4,  6,  8],\n",
+       "        [10, 12, 14, 16]],\n",
+       "\n",
+       "       [[ 1,  3,  5,  7],\n",
+       "        [ 9, 11, 13, 15]]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3차원배열\n",
+    "\n",
+    "np.array([\n",
+    "    [\n",
+    "        [1, 2, 3, 4], \n",
+    "        [5, 6, 7, 8]\n",
+    "    ], \n",
+    "    [\n",
+    "        [2, 4, 6, 8], \n",
+    "        [ 10, 12, 14, 16]\n",
+    "    ],\n",
+    "    [\n",
+    "        [1, 3, 5, 7], \n",
+    "        [9, 11, 13, 15]\n",
+    "    ]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3, 2, 4), dtype=\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((3, 2, 4), dtype=\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[5, 5, 5, 5],\n",
+       "        [5, 5, 5, 5]],\n",
+       "\n",
+       "       [[5, 5, 5, 5],\n",
+       "        [5, 5, 5, 5]],\n",
+       "\n",
+       "       [[5, 5, 5, 5],\n",
+       "        [5, 5, 5, 5]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full((3, 2, 4), 5, dtype=\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1차원\n",
+    "arr_1d = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "# 2차원\n",
+    "arr_2d = np.array([\n",
+    "                    [1, 2, 3, 4], \n",
+    "                    [5, 6, 7, 8]\n",
+    "                ])\n",
+    "\n",
+    "# 3차원 \n",
+    "arr_3d = np.array([\n",
+    "                    [\n",
+    "                        [1, 2, 3, 4], \n",
+    "                        [5, 6, 7, 8]\n",
+    "                    ], \n",
+    "                    [\n",
+    "                        [2, 4, 6, 8], \n",
+    "                        [10,12, 14, 16]\n",
+    "                    ], \n",
+    "                    [\n",
+    "                        [1, 3, 5, 7], \n",
+    "                        [9, 11, 13, 15]\n",
+    "                    ]\n",
+    "                ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2, 4)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_3d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1d.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_3d.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1d.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_3d.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
