--- a/2-1_NumPy데이터다루기/2_NumPy연산.ipynb
+++ b/2-1_NumPy데이터다루기/2_NumPy연산.ipynb
@@ -672,6 +672,627 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.15  -2.33   3.557 -4.095]\n",
+      "[ 1. -2.  4. -4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1.15, -2.33, 3.557, -4.095])\n",
+    "\n",
+    "arr_round = np.round(arr)\n",
+    "print(arr)\n",
+    "print(arr_round)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.15  -2.33   3.557 -4.095]\n",
+      "[ 1.2 -2.3  3.6 -4.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_round_1 = np.round(arr, 1)\n",
+    "print(arr)\n",
+    "print(arr_round_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.15  -2.33   3.557 -4.095]\n",
+      "[ 2. -2.  4. -4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_round_c = np.ceil(arr)\n",
+    "print(arr)\n",
+    "print(arr_round_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.15  -2.33   3.557 -4.095]\n",
+      "[ 1. -3.  3. -5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_floor = np.floor(arr)\n",
+    "print(arr)\n",
+    "print(arr_floor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.15  -2.33   3.557 -4.095]\n",
+      "[ 1. -2.  3. -4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_trunc = np.trunc(arr)\n",
+    "print(arr)\n",
+    "print(arr_trunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_1 = np.arange(5)\n",
+    "print(arr_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_2 = np.arange(1, 10, step=2)\n",
+    "print(arr_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[1 3 5 7 9]\n",
+      "[ 1  4  7 10 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_add_1 = np.add(arr_1, arr_2)\n",
+    "print(arr_1)\n",
+    "print(arr_2)\n",
+    "print(arr_add_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[1 3 5 7 9]\n",
+      "[ 1  4  7 10 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_add_2 = arr_1 + arr_2 \n",
+    "print(arr_1)\n",
+    "print(arr_2)\n",
+    "print(arr_add_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_1 = list(range(5))\n",
+    "a_2 = list(range(1, 10, 2))\n",
+    "a_add_2 = a_1 + a_2\n",
+    "print(a_add_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[1 3 5 7 9]\n",
+      "[-1 -2 -3 -4 -5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_subtract_1 = np.subtract(arr_1, arr_2)\n",
+    "print(arr_1)\n",
+    "print(arr_2)\n",
+    "print(arr_subtract_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -2, -3, -4, -5])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 - arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  3 10 21 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_mul = np.multiply(arr_1, arr_2)\n",
+    "print(arr_mul)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  3, 10, 21, 36])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 * arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.33333333, 0.4       , 0.42857143, 0.44444444])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_divide = np.divide(arr_1, arr_2)\n",
+    "arr_divide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.33333333, 0.4       , 0.42857143, 0.44444444])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 / arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mod(arr_1, arr_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 % arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([     0,      1,     32,   2187, 262144])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.power(arr_1, arr_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([     0,      1,     32,   2187, 262144])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 ** arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_1d_3 = np.array([1, 2, 3])\n",
+    "print(arr_1d_3)\n",
+    "print(arr_1d_3.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n",
+      "(1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_1d_1 = np.array([5])\n",
+    "print(arr_1d_1)\n",
+    "print(arr_1d_1.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_add = arr_1d_3 + arr_1d_1\n",
+    "print(arr_add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4, 7],\n",
+       "       [2, 5, 6],\n",
+       "       [3, 6, 9]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d_3x3 = np.array([\n",
+    "            [1, 4, 7], \n",
+    "            [2, 5, 6], \n",
+    "            [3, 6, 9]\n",
+    "])\n",
+    "arr_2d_3x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  0, -1])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1d_3 = np.array([1, 0, -1])\n",
+    "arr_1d_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 4 6]\n",
+      " [3 5 5]\n",
+      " [4 6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_add = arr_2d_3x3 + arr_1d_3\n",
+    "print(arr_add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]]\n",
+      "(1, 3)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_2d_1x3 = np.array([[1, 2, 3]])\n",
+    "print(arr_2d_1x3)\n",
+    "print(arr_2d_1x3.shape)\n",
+    "print(arr_2d_1x3.ndim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1]\n",
+      " [ 0]\n",
+      " [-1]]\n",
+      "(3, 1)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_2d_3x1 = np.array([\n",
+    "            [1], \n",
+    "            [0], \n",
+    "            [-1]\n",
+    "])\n",
+    "print(arr_2d_3x1)\n",
+    "print(arr_2d_3x1.shape)\n",
+    "print(arr_2d_3x1.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]]\n",
+      "[[ 1]\n",
+      " [ 0]\n",
+      " [-1]]\n",
+      "[[ 1.  2.  3.]\n",
+      " [inf inf inf]\n",
+      " [-1. -2. -3.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HRD영대\\AppData\\Local\\Temp\\ipykernel_5508\\520715817.py:1: RuntimeWarning: divide by zero encountered in divide\n",
+      "  arr_2d_add = arr_2d_1x3 / arr_2d_3x1\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_2d_add = arr_2d_1x3 / arr_2d_3x1\n",
+    "print(arr_2d_1x3)\n",
+    "print(arr_2d_3x1)\n",
+    "print(arr_2d_add)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
