--- a/2-1_NumPy데이터다루기/0_퀴즈.ipynb
+++ b/2-1_NumPy데이터다루기/0_퀴즈.ipynb
@@ -12,10 +12,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "array_2d = np.array([\n",
+    "    [1, 2, 3], \n",
+    "    [4, 5, 6], \n",
+    "    [7, 8, 9]\n",
+    " ])\n",
+    "\n",
+    "print(array_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = np.arange(1, 10).reshape(3, 3)\n",
+    "array"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "문제2. 모든 값이 1(정수)이고 3층 2행 4열인 3차원 배열을 만드시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1 1]\n",
+      "  [1 1 1 1]]\n",
+      "\n",
+      " [[1 1 1 1]\n",
+      "  [1 1 1 1]]\n",
+      "\n",
+      " [[1 1 1 1]\n",
+      "  [1 1 1 1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_3d = np.ones((3, 2, 4), dtype=\"int\")\n",
+    "print(arr_3d)"
    ]
   },
   {
@@ -31,10 +106,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 5 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array_2d[:, 1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "문제4. arr_a 는 arange()를 이용하여 2행 2열의 배열을 생성하고, 각각의 요소에 5를 더하시오 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_a = np.arange(4).reshape(2,2)\n",
+    "print(arr_a + 5)"
    ]
   },
   {
@@ -48,16 +159,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[[10 20 30]\n",
+      " [40 50 60]\n",
+      " [70 80 90]]\n",
+      "[[ 10  40  90]\n",
+      " [ 40 100 180]\n",
+      " [ 70 160 270]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  40,  90],\n",
+       "       [ 40, 100, 180],\n",
+       "       [ 70, 160, 270]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [[10, 20, 30], [40, 50, 60], [70, 80, 90]]\n",
+    "\n",
+    "arr_1d = np.array(a)\n",
+    "arr_2d = np.array(b)\n",
+    "\n",
+    "print(arr_1d)\n",
+    "print(arr_2d)\n",
+    "print(arr_1d * arr_2d)\n",
+    "np.multiply(arr_1d, arr_2d)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "문제6. c = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] 를 5행 2열로 변경하는 코드를 작성하시오"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "array = np.array(c).reshape(5, 2)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
