--- a/2-3_데이터변환/2_데이터인코딩.ipynb
+++ b/2-3_데이터변환/2_데이터인코딩.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "8     F          5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
     "\n",
     "choiceList = list(range(6))\n",
     "\n",
-    "np_labels = np.select(condlist=conditionList, choicelist=choiceList)\n",
+    "np_labels = np.select(condlist=conditionList, choicelist=[0, 1, 2, 3, 4, 5])\n",
     "\n",
     "df[\"Numpy_수치형데이터\"] = np_labels\n",
     "df"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +420,8 @@
        "      <th></th>\n",
        "      <th>Class</th>\n",
        "      <th>to_수치형데이터</th>\n",
-       "      <th>Numpy_수치형데이터</th>\n",
        "      <th>데이터프레임_수치형데이터</th>\n",
+       "      <th>aaa</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -493,25 +493,25 @@
        "</div>"
       ],
       "text/plain": [
-       "  Class  to_수치형데이터  Numpy_수치형데이터  데이터프레임_수치형데이터\n",
-       "0     A          0             0              0\n",
-       "1     B          1             1              1\n",
-       "2     A          0             0              0\n",
-       "3     C          2             2              2\n",
-       "4     E          4             4              4\n",
-       "5     D          3             3              3\n",
-       "6     D          3             3              3\n",
-       "7     A          0             0              0\n",
-       "8     F          5             5              5"
+       "  Class  to_수치형데이터  데이터프레임_수치형데이터  aaa\n",
+       "0     A          0              0    0\n",
+       "1     B          1              1    1\n",
+       "2     A          0              0    0\n",
+       "3     C          2              2    2\n",
+       "4     E          4              4    4\n",
+       "5     D          3              3    3\n",
+       "6     D          3              3    3\n",
+       "7     A          0              0    0\n",
+       "8     F          5              5    5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "데이터프레임_수치형데이터 = df[\"Class\"].map(arg = {\n",
+    "데이터프레임_수치형데이터 = df[\"Class\"].map({\n",
     "    \"A\": 0, \n",
     "    \"B\": 1, \n",
     "    \"C\": 2, \n",
@@ -520,13 +520,13 @@
     "    \"F\": 5, \n",
     "    })\n",
     "\n",
-    "df[\"데이터프레임_수치형데이터\"] = 데이터프레임_수치형데이터\n",
+    "df[\"aaa\"] = 데이터프레임_수치형데이터\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "       [0., 0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -620,84 +620,84 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -705,18 +705,18 @@
       ],
       "text/plain": [
        "   Class_A  Class_B  Class_C  Class_D  Class_E  Class_F\n",
-       "0     True    False    False    False    False    False\n",
-       "1    False     True    False    False    False    False\n",
-       "2     True    False    False    False    False    False\n",
-       "3    False    False     True    False    False    False\n",
-       "4    False    False    False    False     True    False\n",
-       "5    False    False    False     True    False    False\n",
-       "6    False    False    False     True    False    False\n",
-       "7     True    False    False    False    False    False\n",
-       "8    False    False    False    False    False     True"
+       "0        1        0        0        0        0        0\n",
+       "1        0        1        0        0        0        0\n",
+       "2        1        0        0        0        0        0\n",
+       "3        0        0        1        0        0        0\n",
+       "4        0        0        0        0        1        0\n",
+       "5        0        0        0        1        0        0\n",
+       "6        0        0        0        1        0        0\n",
+       "7        1        0        0        0        0        0\n",
+       "8        0        0        0        0        0        1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
     "}\n",
     "df = pd.DataFrame(obj)\n",
     "\n",
-    "pd.get_dummies(df)\n"
+    "pd.get_dummies(df).astype(int)\n"
    ]
   },
   {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "8     F        0        0        0        0        1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1275,9 +1275,20 @@
        "5         s6     99     수"
       ]
      },
-     "execution_count": 37,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 1. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
@@ -1292,13 +1303,26 @@
     "\n",
     "df = pd.DataFrame(obj)\n",
     "\n",
+    "\n",
     "df[\"grade\"] = pd.cut(\n",
     "    df[\"score\"], \n",
     "    bins=[0, 60, 70, 80, 90, 100],\n",
     "    labels=[\"가\", \"양\", \"미\", \"우\", \"수\"]\n",
     ")\n",
+    "display(df)\n",
     "\n",
-    "df\n"
+    "lb_encoder = LabelEncoder()\n",
+    "lb_encoder.fit(df[\"grade\"])\n",
+    "lb_labels = lb_encoder.transform(df[\"grade\"])\n",
+    "\n",
+    "lb_labels_2d = lb_labels.reshape(-1, 1)\n",
+    "lb_labels_2d\n",
+    "\n",
+    "oh_encoder = OneHotEncoder(sparse_output=False)\n",
+    "oh_encoder.fit(lb_labels_2d)\n",
+    "oh_labels = oh_encoder.transform(lb_labels_2d)\n",
+    "\n",
+    "print(oh_labels)\n"
    ]
   },
   {
